--- a/assets/style.css
+++ b/assets/style.css
@@ -71,7 +71,10 @@ body {
 .picture img {
 	width: 100%;
 	height: 100%;
-
+}
+.carousel-item {
+	width: 100%;
+	height: 100%;
 }
 #about-me {
 	flex: 2
