--- a/assets/style.css
+++ b/assets/style.css
@@ -67,7 +67,10 @@ body {
 	margin: 0 20px;
 	z-index: 0;
 }
-
+.size {
+	width: 100%;
+	height: 100%;
+}
 .picture img {
 	width: 100%;
 	height: 100%;
